--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <title>Portfolio</title>
 </head>
@@ -11,10 +11,10 @@
 
     <!-- navbar section -->
     <nav class="navbar">
-        <div class="navbar__bars" id="mobile-menu">
+        <div class="navbar__bars">
             <i class="fas fa-bars navbar__bars--icon"></i>
         </div>
-        <div class="navbar__cross" id="mobile-menu">
+        <div class="navbar__cross">
             <i class="fas fa-times navbar__bars--cross"></i>
         </div>
         <ul class="navbar__menu">
