fix error images not loading

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="portfolio__card">
                 <p class="portfolio__card--title">Holidays calculator</p>
                 <div class="portfolio__images">
-                    <img class="portfolio__images--img" src="/images/holidays-calc.png" alt="">
+                    <img class="portfolio__images--img" src="images/holidays-calc.png" alt="">
                 </div>
                 <div class="portfolio__card--links">
                     <a href="https://abrarkhan619.github.io/holidays-calculator/" target="_blank" class="portfolio__card--preview portfolio__card--btn">Preview <i class="far fa-eye portfolio__card--icons"></i></a>
@@ -90,7 +90,7 @@
             <div class="portfolio__card">
                 <p class="portfolio__card--title">Music player</p>
                 <div class="portfolio__images">
-                    <img class="portfolio__images--img" src="/images/music-player.png" alt="">
+                    <img class="portfolio__images--img" src="images/music-player.png" alt="">
                 </div>
                 <div class="portfolio__card--links">
                     <a href="https://abrarkhan619.github.io/music-player/" target="_blank" class="portfolio__card--preview portfolio__card--btn">Preview <i class="far fa-eye portfolio__card--icons"></i></a>
@@ -101,7 +101,7 @@
             <div class="portfolio__card">
                 <p class="portfolio__card--title">Rugby scoreboard</p>
                 <div class="portfolio__images">
-                    <img class="portfolio__images--img" src="/images/scoreboard.png" alt="">
+                    <img class="portfolio__images--img" src="images/scoreboard.png" alt="">
                 </div>
                 <div class="portfolio__card--links">
                     <a href="https://abrarkhan619.github.io/rugby-scoreboard/" target="_blank" class="portfolio__card--preview portfolio__card--btn">Preview <i class="far fa-eye portfolio__card--icons"></i></a>
@@ -112,7 +112,7 @@
             <div class="portfolio__card">
                 <p class="portfolio__card--title">React todo list</p>
                 <div class="portfolio__images">
-                    <img class="portfolio__images--img" src="/images/react-todo.png" alt="">
+                    <img class="portfolio__images--img" src="images/react-todo.png" alt="">
                 </div>
                 <div class="portfolio__card--links">
                     <a href="https://abrar-todo.netlify.app/" target="_blank" class="portfolio__card--preview portfolio__card--btn">Preview <i class="far fa-eye portfolio__card--icons"></i></a>
@@ -123,7 +123,7 @@
             <div class="portfolio__card">
                 <p class="portfolio__card--title">Dice game</p>
                 <div class="portfolio__images">
-                    <img class="portfolio__images--img" src="/images/dice-game.png" alt="">
+                    <img class="portfolio__images--img" src="images/dice-game.png" alt="">
                 </div>
                 <div class="portfolio__card--links">
                     <a href="https://abrarkhan619.github.io/Dice-Game/" target="_blank" class="portfolio__card--preview portfolio__card--btn">Preview <i class="far fa-eye portfolio__card--icons"></i></a>
@@ -134,7 +134,7 @@
             <div class="portfolio__card">
                 <p class="portfolio__card--title">Zengarden</p>
                 <div class="portfolio__images">
-                    <img class="portfolio__images--img" src="/images/zengarden.png" alt="">
+                    <img class="portfolio__images--img" src="images/zengarden.png" alt="">
                 </div>
                 <div class="portfolio__card--links">
                     <a href="https://abrarkhan619.github.io/Zengarden/" target="_blank" class="portfolio__card--preview portfolio__card--btn">Preview <i class="far fa-eye portfolio__card--icons"></i></a>
