--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <h1 class="contact__heading">Contact me:</h1>
         <div class="contact__wrapper">
             <p class="contact__details">Email: abrar.khan916@gmail.com</p>
-            <p class="contact__details">Phone: +44 1234 567890</p>
+            <!-- <p class="contact__details">Phone: +44 1234 567890</p> -->
         </div>
     </section>
     
